--- a/style/_general.scss
+++ b/style/_general.scss
@@ -19,7 +19,7 @@ body{
 h1{
     font-family: $font-montserrat;
     font-weight: bold;
-    font-size: 25px;
+    font-size: 35px;
 }
 
 h2{
@@ -56,6 +56,15 @@ h5{
     display: none;
 }
 
-@media only screen and (max-width: 480px) {
-
+@media only screen and (max-width: 615px) {
+    
+    h1 {
+        font-size: 25px;
+    }
+    h2{
+        font-size: 20px;
+    }
+    h4{
+        font-size: 14px;
+    }
 }
