--- a/style/_navbar.scss
+++ b/style/_navbar.scss
@@ -8,8 +8,7 @@
   margin: 0;
 
 }
-header {
-  //background-color: $background-color;
+.header {
   width: 100%;
   position: fixed;
   z-index: 1;
@@ -17,180 +16,157 @@ header {
 #logo {
   display: flex;
   padding-top: 18px;
-  //margin-left: 10.83%;;
   width: 59px;
-
 }
-
 .nav{
     display: flex;
     justify-content: space-around; 
     background-color: $background-color;
     border-bottom: none;
     text-align: center;
-
-  
-  }
-  
-  
- 
-  .list-nav{
-    display: inline;
-    vertical-align: top;
-    font-family: $font-montserrat;
-    text-transform: uppercase;
-    font-size: 13px;
-    font-weight: bold;
-    list-style: none;
-    padding-left: 40px;
-
-  }
-  .menu{
-    margin: 0;
-    //padding-right: 10.83%;
-      a {
-        text-decoration: none;
-        color: $purple-color;
-        margin: 0;
-        line-height: 50px;
+}
+.list-nav{
+  display: inline;
+  vertical-align: top;
+  font-family: $font-montserrat;
+  text-transform: uppercase;
+  font-size: 13px;
+  font-weight: bold;
+  list-style: none;
+  padding-left: 40px;
+}
+.menu{
+  margin: 0;
+    a {
+      text-decoration: none;
+      color: $purple-color;
+      margin: 0;
+      line-height: 50px;
+    }
+      :active{
+        color: $second-night-font-color;
       }
-        :active{
-          color: $second-night-font-color;
-        }
-  }
-  label{
-    margin: 0;
-    font-size: 16px;
-    line-height: 80px;
-    display: none;
-
-  }
-  #toggle{
-    display: none;
-
-  }
+}
+label{
+  margin: 0;
+  font-size: 16px;
+  line-height: 80px;
+  display: none;
+}
+#toggle{
+  display: none;
+}
 
 .menu__list--:hover{
   text-decoration: underline $aqua-font-color 2px;
 }
 
-  @media only screen and (max-width: 615px) {
-    .blue-line{
-      width: 100%;
+@media only screen and (max-width: 615px) {
+  .blue-line{
+    width: 100%;
+  }
+  .wider{
+    height: 500px; //this make the menu heighter.
+  }
+  .header {
+    width: 100%;
+    position: fixed;
+    z-index: 1;
+  }
+  .nav {
+    display: flex;
+    justify-content: space-between;
+    background-color: $background-color;
+    opacity: 90%;
+    #logo{
+      margin-left: 30%;
+      width: 48.8px;
     }
-    .wider{
-      height: 500px; //this make the menu heighter.
-    }
-    header {
-      //background: $background-color;
-      width: 100%;
-      position: fixed;
-      z-index: 1;
-    }
-    .nav {
-      display: flex;
-      justify-content: space-between;
-      background-color: $background-color;
-      opacity: 90%;
-    
-  
-      #logo{
-        margin-left: 30%;
-        width: 48.8px;
-      }
-      .list-nav{
-        text-transform: none;
-        padding-left: 0;
-        font-size: 15px;
-        line-height: 30px;
-        
-        #botton__gifo--disappear{
-          display: none;
-        }
-      }
-      .menu__list-- {
-        display: block;
-        background: $purple-color;
-        opacity: 90%;
-        color: $background-color;
-        padding-left: 25%;
-        //margin-left: 23%;
-        width: 100%;
-        
-        
-        
-      }
-      .menu__list{
-        margin-left: -90%;
-      
-      }
-      .exs {
+    .list-nav{
+      text-transform: none;
+      padding-left: 0;
+      font-size: 15px;
+      line-height: 30px;
+      #botton__gifo--disappear{
         display: none;
-        background-color: $purple-color;
-        width: 14px;
-        height: 14px;
-        margin-right: 27px;
-        clip-path: polygon(10% 0, 0 10%, 40% 51%, 0 90%, 10% 100%, 50% 60%, 90% 100%, 100% 90%, 60% 50%, 100% 10%, 90% 0, 50% 40%);
       }
-      .menu2 {
-        position: relative;
-        display: block;
-        width: 64px;
-        height: 64px;
-        cursor: pointer;
-        background-color: $background-color;
-        .bar {
+    }
+    .menu__list-- {
+      display: block;
+      background: $purple-color;
+      opacity: 90%;
+      color: $background-color;
+      padding-left: 25%;
+      width: 100%;  
+    }
+    .menu__list{
+      margin-left: -90%;
+    }
+    .exs {
+      display: none;
+      background-color: $purple-color;
+      width: 14px;
+      height: 14px;
+      margin-right: 27px;
+      clip-path: polygon(10% 0, 0 10%, 40% 51%, 0 90%, 10% 100%, 50% 60%, 90% 100%, 100% 90%, 60% 50%, 100% 10%, 90% 0, 50% 40%);
+    }
+    .menu2 {
+      position: relative;
+      display: block;
+      width: 64px;
+      height: 64px;
+      cursor: pointer;
+      background-color: $background-color;
+      .bar {
+        position: absolute;
+        top: 10px;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        width: 15px;
+        height: 2px;
+        margin: auto;
+        background: $purple-color;
+        opacity: 100%;
+        &:before, &:after {
           position: absolute;
-          top: 10px;
-          right: 0;
-          bottom: 0;
-          left: 0;
           width: 15px;
           height: 2px;
-          margin: auto;
+          content: '';
           background: $purple-color;
           opacity: 100%;
-          &:before, &:after {
-            position: absolute;
-            width: 15px;
-            height: 2px;
-            content: '';
-            background: $purple-color;
-            opacity: 100%;
-          }
-          &:before {
-            top: -4px;
-            left: 0;
-          }
-          &:after {
-            bottom: -4px; 
-            left: 0;
-          }
+        }
+        &:before {
+          top: -4px;
+          left: 0;
+        }
+        &:after {
+          bottom: -4px; 
+          left: 0;
         }
       }
-  
-      #toggle:checked + .menu{
-        display: block; 
-        
-      }
-      #toggle:checked~.menu2 {
-        .bar {
-            display: none;
-        }
-        .exs {
-            display: inline-block;
-            margin-left: 30px;
-        }
     }
-     
-      .menu {
-        width: 100%;
-        //background-color: $purple-color;
-        //opacity: 90%;
+    #toggle:checked + .menu{
+      display: block;    
+    }
+    #toggle:checked~.menu2 {
+      .bar {
         display: none;
-        margin-top: 60px;
-        //height: 300px;
-      }      
+      }
+      .exs {
+        display: inline-block;
+        margin-left: 30px;
+      }
     }
- 
+    .menu {
+      width: 100%;
+      display: none;
+      margin-top: 60px;
+    }      
   }
+  .menu__list--:hover{
+    text-decoration: none;
+  }
+
+
+}
