--- a/style/favorites.scss
+++ b/style/favorites.scss
@@ -13,9 +13,6 @@
 //Main
 @import "_main.scss";
 
-//Night mode
-//@import "_nightmode.scss";
-
 //Trending - Slider
 @import "_trending.scss";
 
@@ -24,6 +21,7 @@
 
 #margin-galery{
     margin-left: 10%;
+    margin-top: 2%;
 }
 .title-favoritos {
     color: $purple-color;
@@ -39,16 +37,15 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
+    align-items: center;
     margin-bottom: 5%;
 }
 #icon-fav-sin-contenido{
     width: 151px;
     height: 150px;
-    margin-left: 45%;//mejorar esto para responsive
 }
 
 .galery{
-    
     display: inline;
     width: calc(260px * 4 + 4em);
     margin: auto;
@@ -72,12 +69,11 @@
     z-index: 0;
     opacity: 0;
     transition: all .3s ease-in-out;  
-
 }
 .img-layer:hover {
    background-color: $purple-color;
    opacity: 0.7;
-   width: 263px;
+   width: 260px;
    height: 200px;
 }
 #icons-layer {
@@ -102,91 +98,7 @@
     cursor: pointer;
     outline: inherit;
 }
-/*.img-layer{
-    width: 260px;
-    height: 200px;
-    display: flex;
-    justify-content: flex-end;
-    margin-left: -260px; //-19%;
-    opacity: 0;
-    transition: all .3s ease-in-out;  
-}
-.img-layer:hover {
-    background-color: $purple-color;
-    opacity: 0.7;
-    width: 260px;
-    height: 200px;
-}
 
-#icons-layer {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    margin-right: 2%;
-}
-.icons-layer {
-    cursor: pointer;
-    width: 32px;
-    height: 32px;
-    margin-right: 4%;
-    margin-top: 5%;
-    border:none;
-    border-radius: 6px;
-    background: none;
-    color: inherit;
-    border: none;
-    padding: 0;
-    font: inherit;
-    cursor: pointer;
-    outline: inherit;
-}    4/08*/
-
-
-//.img-layer:hover
-
-
-/*.favorites-container{ //este es el container que ubica los botones de las imagenes
-    //max-width: 1127px;
-    position: relative;
-    margin: auto;
-    display: flex;
-    flex-direction: row;
-    //justify-content: space-between;
-}*/
-
-///prueba layer con iconos
-
-//style= "background: none; border:none; margin-top: 1.5rem; margin-left: 2rem;  display: flex; justify-content: flex-end"
-
-/*.grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-column-gap: 2.1rem;
-    grid-row-gap: 2.5rem;
-    margin: 0 auto;
-}
-. galery 
-//margin-left: 20%;
-   // width: 100%;
-    
-   // grid-template-columns: 200px 200px 200px 200px;
-  //  grid-template-rows: 260px 260px 260px 260px;
-   // grid-template-columns:repeat(4, 200px);
-   // grid-template-rows: 260px;
-    //height: 250px;
-    //width: 200px;
-    //grid-template-columns: 200px 100px 200px;
-    //grid-template-rows: 250px auto 250px; 
-    //column-gap: 10px;
-  //  row-gap: 15px;
-    //justify-content: space-between;
-    //row-gap: 10px ;
-  //  column-gap: 10px;
-.grid img {
-    width: 156px;
-    height: 120px;
-    margin: 0 auto;
-}*/
 
 @media only screen and (max-width: 615px) {
 
@@ -205,5 +117,8 @@
     .img-layer{
         display: none;
     }
-    
+  
+    .title-favoritos {
+        margin-top: 15%;
+    }
 }
