--- a/style/nightmode.css
+++ b/style/nightmode.css
@@ -51,32 +51,37 @@ h5 {
   display: none;
 }
 
-hr {
+.blue-line {
   display: flex;
   align-items: center;
   height: 5px;
+  width: 100%;
   background-color: black;
   margin: 0;
-  border: none;
+  border-color: black;
+}
+
+header {
+  width: 100%;
+  position: fixed;
+  z-index: 1;
+}
+
+#logo {
+  display: flex;
+  padding-top: 18px;
+  width: 59px;
 }
 
 .nav {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   border-bottom: none;
   text-align: center;
   background: #37383C;
 }
 
-#logo {
-  display: flex;
-  align-self: flex-start;
-  padding-top: 18px;
-  margin-left: 10.83%;
-  width: 59px;
-}
-
-li {
+.list-nav {
   display: inline;
   vertical-align: top;
   font-family: "Montserrat", sans-serif;
@@ -89,7 +94,6 @@ li {
 
 .menu {
   margin: 0;
-  padding-right: 10.83%;
 }
 
 .menu a {
@@ -118,28 +122,44 @@ label {
   text-decoration: underline #5ED7C6 2px;
 }
 
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 615px) {
+  .blue-line {
+    width: 100%;
+  }
+  .wider {
+    height: 500px;
+  }
+  header {
+    width: 100%;
+    position: fixed;
+    z-index: 1;
+  }
   .nav {
     display: flex;
     justify-content: space-between;
+    background-color: #37383C;
+    opacity: 100%;
   }
   .nav #logo {
-    margin-left: 5%;
+    margin-left: 30%;
     width: 48.8px;
   }
-  .nav li {
+  .nav .list-nav {
     text-transform: none;
     padding-left: 0;
+    font-size: 15px;
+    line-height: 30px;
   }
-  .nav li #botton__gifo--disappear {
+  .nav .list-nav #botton__gifo--disappear {
     display: none;
   }
   .nav .menu__list-- {
     display: block;
     background: black;
-    opacity: 90%;
+    opacity: 100%;
     color: #FFFFFFFF;
-    width: 375px;
+    padding-left: 25%;
+    width: 100%;
   }
   .nav .menu__list {
     margin-left: -90%;
@@ -158,7 +178,7 @@ label {
     width: 64px;
     height: 64px;
     cursor: pointer;
-    background-color: red;
+    background-color: #37383C;
   }
   .nav .menu2 .bar {
     position: absolute;
@@ -177,7 +197,7 @@ label {
     width: 15px;
     height: 2px;
     content: '';
-    background: green;
+    background: #FFFFFFFF;
     opacity: 100%;
   }
   .nav .menu2 .bar:before {
@@ -199,16 +219,12 @@ label {
     margin-left: 30px;
   }
   .nav .menu {
-    width: 150px;
-    background-color: red;
+    width: 100%;
     display: none;
-    margin-top: 50px;
-    height: 484px;
+    margin-top: 60px;
   }
-  .nav .menu a:hover {
-    color: #00F3BB;
-    text-decoration: line-through;
-    font-weight: 500;
+  .menu__list--:hover {
+    text-decoration: none;
   }
 }
 
@@ -228,7 +244,6 @@ label {
   font-size: 35px;
   text-align: center;
   line-height: 50px;
-  margin-top: 50px;
 }
 
 .change__color {
@@ -236,14 +251,14 @@ label {
 }
 
 .container__photo {
-  height: 100%;
-  width: 100%;
+  height: 190px;
+  width: 399px;
 }
 
 .container_search {
   display: flex;
   flex-direction: column;
-  align-content: center;
+  align-items: center;
 }
 
 form {
@@ -251,24 +266,13 @@ form {
   width: 551px;
   top: 66.6%;
   border-radius: 50px;
-  border: 1px solid #572EE5;
+  border: 1px solid #FFFFFFFF;
 }
 
 .search {
-  /* display: flex;
-    align-items: center;
-    top: 66.6%;
-    background-color: $night-background-color;
-    padding: 10px;
-    height: 30px;
-    width: 551px;
-    margin-left: 10%;
-    border-radius: 50px;
-    border: 1px solid $background-color;
-*/
   display: flex;
   align-items: center;
-  background-color: #FFFFFFFF;
+  background-color: #37383C;
   padding: 10px;
 }
 
@@ -395,21 +399,23 @@ form {
   display: none;
   background: none;
   color: #FFFFFFFF;
+  padding-top: 2px;
   border-radius: 50px;
-  border: 0.5px solid #572EE5;
+  border: 1px solid #FFFFFFFF;
   height: 50px;
   width: 127px;
-  margin-left: 25%;
-  margin-top: 2%;
+  font-size: 13px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: bold;
 }
 
-#button-more :hover {
-  background-color: #572EE5;
-  color: #FFFFFFFF;
+#button-more:hover {
+  background-color: #FFFFFFFF;
+  color: black;
 }
 
 .gral-button {
-  display: none;
+  display: block;
   position: absolute;
   margin-left: 25%;
   margin-top: 2%;
@@ -429,11 +435,166 @@ form {
   width: 127px;
 }
 
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 80%;
+  overflow: auto;
+  background-color: red;
+}
+
+.mySlidesModal {
+  display: flex;
+  justify-content: center;
+}
+
+.modal-container {
+  background-color: #fefefe;
+  border: none;
+}
+
+.close {
+  color: greenyellow;
+  display: flex;
+  justify-content: flex-end;
+  margin-right: 5%;
+  font-size: 50px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.prev2, .next2 {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  margin-top: -30px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 5px;
+  padding-top: 5px;
+  width: 8px;
+  color: #572EE5;
+  border-style: solid;
+  border-width: 2px;
+  font-size: 14px;
+  transition: 0.6s ease;
+  user-select: none;
+}
+
+.next2 {
+  right: 0;
+}
+
+.prev2:hover, .next2:hover {
+  background-color: #572EE5;
+  color: white;
+  border-color: #572EE5;
+}
+
+.arrowsModal {
+  display: flex;
+  justify-content: space-around;
+  margin-left: 22%;
+  margin-right: 22%;
+}
+
+#titleModal {
+  font-size: 15px;
+  color: black;
+  font-weight: 400;
+}
+
+#userModal {
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.icons-layer-modal {
+  cursor: pointer;
+  flex-direction: row;
+  width: 32px;
+  height: 32px;
+  margin-top: 100%;
+  border: 2px #572EE5;
+  border-radius: 6px;
+  background: none;
+  color: inherit;
+  cursor: pointer;
+  outline: inherit;
+}
+
+.modal-icon-layer {
+  display: flex;
+  padding-top: 23%;
+  justify-content: space-between;
+  margin-left: -5%;
+}
+
+@media only screen and (max-width: 615px) {
+  .container_search {
+    margin-left: 5%;
+    margin-top: 5%;
+    max-width: 334px;
+    margin-left: 10%;
+  }
+  .container__photo {
+    height: 130px;
+    width: 273px;
+  }
+  .title__color {
+    font-size: 25px;
+    text-align: center;
+    line-height: 33px;
+    margin-top: 8%;
+  }
+  #break__desktop {
+    display: inline;
+  }
+  form {
+    height: 40px;
+    width: 334px;
+    border-radius: 27px;
+  }
+  .search {
+    padding: 0;
+  }
+  .title {
+    margin-left: 5%;
+    margin-top: 5%;
+  }
+  .galeryMeasure {
+    width: 156px;
+    height: 120px;
+    margin-left: 5%;
+    margin-bottom: 5%;
+  }
+  .results {
+    display: inline;
+    width: calc(156px * 2 + 4em);
+    margin: auto;
+  }
+  .img-layer {
+    display: none;
+  }
+}
+
 .trending {
   background-color: #222326;
   height: 640px;
-  width: 1440px;
+  width: 100%;
   margin-top: 50px;
+  padding-top: 10px;
+  position: center;
 }
 
 #trending__description {
@@ -450,8 +611,7 @@ form {
 }
 
 .trending__header {
-  margin-top: 30px;
-  position: center;
+  margin-top: 80px;
 }
 
 #title__trending {
@@ -472,6 +632,11 @@ form {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+}
+
+.styleCard {
+  width: 357px;
+  height: 275px;
 }
 
 .prev, .next {
@@ -565,48 +730,45 @@ form {
   outline: inherit;
 }
 
-/* // The Modal (background) 
-.modal {
-    display: none; // Hidden by default 
-    position: fixed; // Stay in place 
-    z-index: 1; //Sit on top 
-    left: 0;
-    top: 0;
-    width: 100%; //Full width 
-    height: 100%; //Full height 
-    overflow: auto;// Enable scroll if needed 
-    background-color: rgb(0,0,0);// Fallback color 
-    background-color: rgba(0,0,0,0.4); // Black w/ opacity 
+.arrowsTrend {
+  display: flex;
+  justify-content: space-around;
+  margin-left: -5%;
+  margin-right: -5%;
 }
 
-Modal Content/Box 
-.modal-container {
-    background-color: #fefefe;
-    margin: 15% auto; // 15% from the top and centered 
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%; // Could be more or less, depending on screen size 
+@media only screen and (max-width: 615px) {
+  .trending {
+    background-color: #222326;
+    height: 430px;
+    width: 100%;
+    margin-top: 50px;
+    padding-top: 10px;
+    position: center;
   }
-
-.close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
+  .img-layer-trending {
+    display: none;
+  }
+  .slideshow-container {
+    max-width: 375px;
+    overflow: hidden;
+  }
+  .styleCard {
+    width: 243px;
+    height: 187px;
+  }
 }
 
-.close:hover,
-.close:focus {
-  color: black;
-  text-decoration: none;
-  cursor: pointer;
+#margin-galery {
+  margin-left: 10%;
+  margin-top: 2%;
 }
-*/
+
 .title-favoritos {
   color: #FFFFFFFF;
   font-size: 15px;
   text-align: center;
-  margin-top: 2px;
+  margin-top: 8%;
 }
 
 #default-msg {
@@ -624,23 +786,29 @@ Modal Content/Box
 #icon-fav-sin-contenido {
   width: 151px;
   height: 150px;
-  margin-left: 45%;
 }
 
 .galery {
-  display: flex;
-  justify-content: flex-start;
-  flex-wrap: wrap;
-  max-width: 80%;
-  margin-left: 10%;
+  display: inline;
+  width: calc(260px * 4 + 4em);
+  margin: auto;
+}
+
+.galeryMeasure {
+  width: 260px;
+  height: 200px;
+  margin-left: 2%;
+  margin-bottom: 2%;
 }
 
 .img-layer {
-  width: 260px;
+  display: inline;
+  position: absolute;
+  width: 262px;
   height: 200px;
-  display: flex;
-  justify-content: flex-end;
-  margin-left: -260px;
+  margin-left: -262px;
+  margin-top: 0;
+  z-index: 0;
   opacity: 0;
   transition: all .3s ease-in-out;
 }
@@ -676,17 +844,42 @@ Modal Content/Box
   outline: inherit;
 }
 
+@media only screen and (max-width: 615px) {
+  .galeryMeasure {
+    width: 156px;
+    height: 120px;
+    margin-left: 5%;
+    margin-bottom: 5%;
+  }
+  .galery {
+    display: inline;
+    width: calc(156px * 2 + 4em);
+    margin: auto;
+  }
+  .img-layer {
+    display: none;
+  }
+  .title-favoritos {
+    margin-top: 15%;
+  }
+}
+
 .title-mygifs {
   color: #FFFFFFFF;
   font-size: 15px;
   text-align: center;
-  margin-top: 2px;
+  margin-top: 8%;
 }
 
 #icon-mygifs-sin-contenido {
   width: 151px;
   height: 150px;
-  margin-left: 45%;
+}
+
+@media only screen and (max-width: 615px) {
+  .title-mygifs {
+    margin-top: 15%;
+  }
 }
 
 #main-container {
@@ -707,15 +900,6 @@ Modal Content/Box
   border: 1.5px solid #FFFFFFFF;
   width: 688px;
   height: 390px;
-}
-
-.tapes-container {
-  display: flex;
-  flex-direction: row;
-  margin-bottom: -8%;
-  margin-left: 5%;
-  border-collapse: collapse;
-  position: relative;
 }
 
 .video-preview {
@@ -1008,6 +1192,7 @@ video {
   align-items: center;
   font-family: FontAwesome5Brands-Regular;
   color: #FFFFFFFF;
+  font-size: 15px;
   letter-spacing: 0;
 }
 
@@ -1029,5 +1214,22 @@ video {
 
 .copyright {
   margin-right: 10.83%;
+}
+
+@media only screen and (max-width: 615px) {
+  .icon-container {
+    flex-direction: column;
+    margin: 0;
+  }
+  .media-container {
+    flex-direction: column;
+    justify-content: center;
+  }
+  #icons {
+    justify-content: center;
+  }
+  .copyright {
+    margin: 0;
+  }
 }
 /*# sourceMappingURL=nightmode.css.map */
