--- a/style/_trending.scss
+++ b/style/_trending.scss
@@ -144,7 +144,21 @@
     margin-left: -5%;
     margin-right: -5%;
 }
-
+.user-trend{
+    font-family: $font-roboto;
+    font-weight: 400;
+    font-size: 15px;
+    color: $background-color;
+    display: block;
+    margin-left: 5px;
+    margin-top:50%;
+    width: 240px;
+}
+.titleGtrend{
+    font-size: 16px;
+    font-weight: bold;
+    display: block;
+}
 @media only screen and (max-width: 615px) {
     .trending{
         background-color:#F3F5F8;
