--- a/style/favorites.scss
+++ b/style/favorites.scss
@@ -99,6 +99,22 @@
     outline: inherit;
 }
 
+.user-title{
+    font-family: $font-roboto;
+    font-weight: 400;
+    font-size: 15px;
+    color: $background-color;
+    display: block;
+    margin-left: 5px;
+    margin-top: 20%;
+    width: 200px;
+}
+.titleG{
+    font-size: 16px;
+    font-weight: bold;
+    display: block;
+}
+
 
 @media only screen and (max-width: 615px) {
 
