--- a/style/my-gifs.css
+++ b/style/my-gifs.css
@@ -392,14 +392,42 @@ form {
   outline: inherit;
 }
 
-.autoList {
-  list-style: none;
+.user-title {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 15px;
+  color: #FFFFFFFF;
+  display: block;
+  margin-left: 5px;
+  margin-top: 20%;
+  width: 200px;
+}
+
+.titleG {
+  font-size: 16px;
+  font-weight: bold;
   display: block;
 }
 
+.autoList:hover {
+  background-color: #f1f1f1;
+}
+
+.autoList {
+  list-style: none;
+  display: block;
+  height: 20px;
+  padding-left: 10px;
+  width: 100%;
+}
+
 .autocomplete {
-  margin-top: -72px;
-  margin-left: -445px;
+  width: 551px;
+  border-radius: 50px;
+  border: 1px solid #572EE5;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+  padding: 10px;
 }
 
 .gray-line {
@@ -410,7 +438,6 @@ form {
 }
 
 #button-more {
-  display: none;
   background: none;
   border-radius: 50px;
   padding-top: 2px;
@@ -751,6 +778,23 @@ form {
   margin-right: -5%;
 }
 
+.user-trend {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 15px;
+  color: #FFFFFFFF;
+  display: block;
+  margin-left: 5px;
+  margin-top: 50%;
+  width: 240px;
+}
+
+.titleGtrend {
+  font-size: 16px;
+  font-weight: bold;
+  display: block;
+}
+
 @media only screen and (max-width: 615px) {
   .trending {
     background-color: #F3F5F8;
@@ -919,6 +963,23 @@ form {
   font: inherit;
   cursor: pointer;
   outline: inherit;
+}
+
+.user-title {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 15px;
+  color: #FFFFFFFF;
+  display: block;
+  margin-left: 5px;
+  margin-top: 30%;
+  width: 200px;
+}
+
+.titleG {
+  font-size: 16px;
+  font-weight: bold;
+  display: block;
 }
 
 @media only screen and (max-width: 615px) {
