--- a/style/nightmode.scss
+++ b/style/nightmode.scss
@@ -386,6 +386,38 @@ form{
     outline: inherit;
 }
 
+.user-title{
+    font-family: $font-roboto;
+    font-weight: 400;
+    font-size: 15px;
+    color: $background-color;
+    display: block;
+    margin-left: 5px;
+    margin-top: 20%;
+    width: 200px;
+}
+.titleG{
+    font-size: 16px;
+    font-weight: bold;
+    display: block;
+}
+.user-trend{
+    font-family: $font-roboto;
+    font-weight: 400;
+    font-size: 15px;
+    color: $background-color;
+    display: block;
+    margin-left: 5px;
+    margin-top:50%;
+    width: 240px;
+}
+.titleGtrend{
+    font-size: 16px;
+    font-weight: bold;
+    display: block;
+}
+
+
 //Style list autocompleted
 .autoList{
     list-style: none;
