--- a/style/favorites.scss
+++ b/style/favorites.scss
@@ -27,7 +27,7 @@
     color: $purple-color;
     font-size: 15px;
     text-align: center;
-    margin-top: 8%;
+    margin-top: 110px;
 }
 #default-msg{
     font-size: 22px;
@@ -121,7 +121,8 @@
     .galeryMeasure{
         width: 156px; 
         height: 120px;
-        margin-left: 5%;
+        margin-left: 0;
+        margin-right: 2%;
         margin-bottom: 5%;
     }
     .galery{
@@ -135,6 +136,6 @@
     }
   
     .title-favoritos {
-        margin-top: 15%;
+        margin-top: 77px;
     }
 }
