--- a/style/nightmode.scss
+++ b/style/nightmode.scss
@@ -84,7 +84,7 @@ h5{
     border-color: $black-font-color;
   
 }
-header {
+.header {
     width: 100%;
     position: fixed;
     z-index: 1;
@@ -898,7 +898,7 @@ form{
     color: $background-color;
     font-size: 15px;
     text-align: center;
-    margin-top: 8%;
+    margin-top: 110px;
 }
 #default-msg{
     font-size: 22px;
@@ -908,6 +908,7 @@ form{
     display: flex;
     justify-content: center;
     flex-direction: column;
+    align-items: center;
     margin-bottom: 5%;
 }
 #icon-fav-sin-contenido{
@@ -1003,7 +1004,7 @@ form{
     }
   
     .title-favoritos {
-        margin-top: 15%;
+        margin-top: 77px;
     }
 }
 
@@ -1014,7 +1015,7 @@ form{
     color: $background-color;
     font-size: 15px;
     text-align: center;
-    margin-top: 8%;
+    margin-top: 110px;
 }
 
 #icon-mygifs-sin-contenido{
@@ -1025,7 +1026,7 @@ form{
 @media only screen and (max-width: 615px) {
 
     .title-mygifs {
-        margin-top: 15%;
+        margin-top: 77px;
     }
 }
 
@@ -1039,9 +1040,8 @@ form{
 }
 .camera-display{
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     flex-direction: row;
-    margin-left: 8%;
 }
 .create-gifo-container{
     border: 1.5px solid $background-color;
@@ -1077,21 +1077,21 @@ video{
 #num-bar-container{
     display: flex;
     flex-direction: column;
-    margin-left: 40px;  
 } 
 .numbers-container{
     display: flex;
     flex-direction: row;
     width: 45%;
-    margin-left: 16%;
     margin-bottom: 5%;
     margin-top: -3%;
+    justify-content: center;
+    margin-left: 28%;
 }
 .num-repeat-container{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin-left: 30%;
+    margin-left: -4%;
 }
 
 .button-number{
@@ -1140,7 +1140,7 @@ video{
     display: block; 
     font-size: 15px;
     letter-spacing: 0;
-    margin-right: 10%;
+    margin-right: 7%;
     font-family: $font-montserrat;
     font-weight: bold;
     color: $background-color;
@@ -1150,7 +1150,8 @@ video{
     font-size: 13px;
     letter-spacing: 0;
     display: none; 
-    margin-right: 10%;
+    margin-right: 7%;
+    margin-top: -18px;
     &:hover{
         text-decoration: underline $aqua-font-color 3px;
     }
@@ -1245,7 +1246,7 @@ video{
     background-color: #572EE5;
     opacity: 0.7;
     margin-left: -796px;
-    margin-top: 2.8%; 
+    margin-top: 35px; 
 }
 .progress-icon{
     display: flex;
@@ -1259,7 +1260,7 @@ video{
     background-color: #572EE5;
     opacity: 0.7;
     margin-left: -796px;
-    margin-top: 2.8%;
+    margin-top: 35px;
 }
 
 .progress-icon{
