--- a/style/my-gifs.scss
+++ b/style/my-gifs.scss
@@ -27,7 +27,7 @@
     color: $purple-color;
     font-size: 15px;
     text-align: center;
-    margin-top: 8%;
+    margin-top: 110px;
 }
 #default-msg{
     font-size: 22px;
@@ -37,6 +37,7 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
+    align-items: center;
     margin-bottom: 5%;
 }
 #icon-mygifs-sin-contenido{
@@ -44,8 +45,7 @@
     height: 150px;
 }
 
-.galery{
-    
+.galery{  
     display: inline;
     width: calc(260px * 4 + 4em);
     margin: auto;
