--- a/style/favorites.css
+++ b/style/favorites.css
@@ -284,8 +284,6 @@ form {
 }
 
 .search {
-  display: flex;
-  align-items: center;
   background-color: #FFFFFFFF;
   padding: 10px;
 }
@@ -302,7 +300,8 @@ form {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   color: black;
-  margin-left: 10px;
+  margin-left: 45px;
+  margin-top: -6px;
   text-transform: capitalize;
 }
 
@@ -350,11 +349,40 @@ form {
   height: 20px;
   text-decoration: none;
   color: #572EE5;
+  float: right;
+  margin-top: -36px;
+  margin-right: 18px;
+}
+
+.submit {
+  text-decoration: none;
+  border: none;
+  background: none;
 }
 
 #button__search {
   border: none;
   background: none;
+}
+
+#button__exs {
+  border: none;
+  background: none;
+  width: 14px;
+  height: 14px;
+}
+
+#second__search {
+  width: 20px;
+  height: 20px;
+  float: left;
+  margin-top: -36px;
+  margin-left: 18px;
+}
+
+#sec__search {
+  color: #9CAFC3;
+  font-size: 20px;
 }
 
 .gifos__results {
@@ -451,6 +479,7 @@ form {
   border: 1px solid #572EE5;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
+  border-top-color: lightgray;
   padding: 10px;
 }
 
@@ -670,6 +699,12 @@ form {
     font-size: 30px;
     margin-top: 100px;
   }
+  .autocomplete {
+    width: 314px;
+  }
+  #exs__size {
+    width: 14px;
+  }
 }
 
 .trending {
@@ -877,6 +912,9 @@ form {
   .modal-container {
     width: 100%;
     height: 100%;
+  }
+  #break__mobile {
+    display: block;
   }
 }
 
