--- a/style/_main.scss
+++ b/style/_main.scss
@@ -45,8 +45,6 @@ form{
 }
 
 .search {
-    //display: flex;
-   // align-items: center;
     background-color: $background-color;
     padding: 10px;
 }    
@@ -79,8 +77,10 @@ form{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    max-width: 200px;
     margin-bottom: 55px;
-    margin-top: -10px;
+    margin-top: -50px;
+    margin-left: 40%;
 }
 #icon-try-again{
     width: 150px; 
@@ -136,7 +136,6 @@ form{
 }
 
 #second__search{
-    //display: none;
     width: 20px;
     height: 20px;
     float: left;
@@ -258,7 +257,7 @@ form{
 }
 ///VER MAS button
 #button-more{ 
-    //display: none;
+  
     background: none;
     border-radius: 50px;
     padding-top: 2px;
@@ -410,10 +409,9 @@ form{
 @media only screen and (max-width: 615px) {
     
     .container_search{
-        margin-left: 5%;
         margin-top: 5%;
         max-width:  334px;
-        margin-left: 10%;
+        margin-left: 3%;
     }
     .container__photo {
         height: 130px;
@@ -436,6 +434,9 @@ form{
     .search{
         padding: 0;
     }
+    .search__text{
+        width: 260px;
+    }
     .title{
         margin-left: 5%;
         margin-top: 5%;
@@ -453,6 +454,9 @@ form{
     }
     .img-layer{
         display: none;
+    }
+    .tryAgain{
+        margin-left: 26%;
     }
 
     //MODAL
