--- a/style/nightmode.css
+++ b/style/nightmode.css
@@ -16,7 +16,7 @@ body {
 h1 {
   font-family: "Montserrat", sans-serif;
   font-weight: bold;
-  font-size: 25px;
+  font-size: 35px;
 }
 
 h2 {
@@ -282,8 +282,6 @@ form {
 }
 
 .search {
-  display: flex;
-  align-items: center;
   background-color: #37383C;
   padding: 10px;
 }
@@ -300,13 +298,36 @@ form {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   color: #9CAFC3;
-  margin-left: 5px;
+  margin-left: 45px;
+  margin-top: -6px;
+  text-transform: capitalize;
+}
+
+#tryAgain {
+  color: #5ED7C6;
+}
+
+.tryAgain {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  max-width: 200px;
+  margin-bottom: 55px;
+  margin-top: -50px;
+  margin-left: 40%;
+}
+
+#icon-try-again {
+  width: 150px;
+  height: 150px;
 }
 
 #list-auto {
   display: flex;
   align-items: flex-start;
   flex-direction: column;
+  text-transform: capitalize;
 }
 
 #header-results {
@@ -319,7 +340,8 @@ form {
   font-size: 35px;
   text-align: center;
   line-height: 30px;
-  margin-top: 5%;
+  margin-top: 80px;
+  text-transform: capitalize;
 }
 
 .button {
@@ -327,11 +349,40 @@ form {
   height: 20px;
   text-decoration: none;
   color: #FFFFFFFF;
+  float: right;
+  margin-top: -36px;
+  margin-right: 18px;
+}
+
+.submit {
+  text-decoration: none;
+  border: none;
+  background: none;
 }
 
 #button__search {
   border: none;
   background: none;
+}
+
+#button__exs {
+  border: none;
+  background: none;
+  width: 14px;
+  height: 14px;
+}
+
+#second__search {
+  width: 20px;
+  height: 20px;
+  float: left;
+  margin-top: -36px;
+  margin-left: 18px;
+}
+
+#sec__search {
+  color: #9CAFC3;
+  font-size: 20px;
 }
 
 .gifos__results {
@@ -428,6 +479,7 @@ form {
   border: 1px solid #FFFFFFFF;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
+  border-top-color: lightgray;
   padding: 10px;
 }
 
@@ -453,10 +505,10 @@ form {
   border: 1px solid #9CAFC3;
   width: 338px;
   height: 0.1px;
+  margin-top: 70px;
 }
 
 #button-more {
-  display: none;
   background: none;
   color: #FFFFFFFF;
   padding-top: 2px;
@@ -537,7 +589,7 @@ form {
 .prev2, .next2 {
   cursor: pointer;
   position: absolute;
-  top: 50%;
+  top: 400px;
   margin-top: -30px;
   padding-left: 10px;
   padding-right: 10px;
@@ -609,9 +661,8 @@ form {
 @media only screen and (max-width: 615px) {
   .container_search {
     margin-left: 5%;
-    margin-top: 5%;
     max-width: 334px;
-    margin-left: 10%;
+    margin-left: 3%;
   }
   .container__photo {
     height: 130px;
@@ -634,6 +685,9 @@ form {
   .search {
     padding: 0;
   }
+  .search__text {
+    width: 260px;
+  }
   .title {
     margin-left: 5%;
     margin-top: 5%;
@@ -652,6 +706,9 @@ form {
   .img-layer {
     display: none;
   }
+  .tryAgain {
+    margin-left: 26%;
+  }
   #titleModal {
     margin-left: 8%;
     width: 270px;
@@ -664,6 +721,12 @@ form {
     margin-right: 5%;
     font-size: 30px;
     margin-top: 100px;
+  }
+  .autocomplete {
+    width: 314px;
+  }
+  #exs__size {
+    width: 14px;
   }
 }
 
@@ -873,6 +936,12 @@ form {
     width: 100%;
     height: 100%;
   }
+  #break__mobile {
+    display: block;
+  }
+  .arrowsTrend {
+    display: none;
+  }
 }
 
 #margin-galery {
@@ -982,7 +1051,8 @@ form {
   .galeryMeasure {
     width: 156px;
     height: 120px;
-    margin-left: 5%;
+    margin-left: 0;
+    margin-right: 2%;
     margin-bottom: 5%;
   }
   .galery {
