--- a/style/nightmode.scss
+++ b/style/nightmode.scss
@@ -16,13 +16,12 @@ body{
     min-width: 375px;
     margin: 0;
     padding: 0;
-    //box-sizing: border-box;
 }
 
 h1{
     font-family: $font-montserrat;
     font-weight: bold;
-    font-size: 25px;
+    font-size: 35px;
 }
 
 h2{
@@ -294,8 +293,6 @@ form{
     
 }
 .search {
-    display: flex;
-    align-items: center;
     background-color: $night-background-color;
     padding: 10px;
 }    
@@ -311,13 +308,34 @@ form{
     font-family: $font-roboto;
     font-weight: 400;
     color: $second-night-font-color;
-    margin-left: 5px;
-    
+    margin-left: 45px;
+    margin-top: -6px;
+    text-transform: capitalize;
+}
+//Error Msg
+#tryAgain{
+    color: $aqua-font-color;
+
+}
+.tryAgain{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    max-width: 200px;
+    margin-bottom: 55px;
+    margin-top: -50px;
+    margin-left: 40%;
+}
+#icon-try-again{
+    width: 150px; 
+    height: 150px;
 }
 #list-auto{
     display: flex;
     align-items: flex-start;
     flex-direction: column;
+    text-transform: capitalize;
 }
 #header-results{
     display: flex;
@@ -328,7 +346,8 @@ form{
     font-size: 35px;
     text-align: center;
     line-height: 30px;
-    margin-top: 5%;
+    margin-top: 80px;
+    text-transform: capitalize;
 }
 
 //Search button
@@ -337,12 +356,38 @@ form{
     height: 20px;
     text-decoration: none;
     color: $background-color;
+    float: right;
+    margin-top: -36px;
+    margin-right: 18px;
 }
-#button__search{
+.submit{
+    text-decoration: none; 
     border: none;
     background: none;
 }
 
+#button__search{
+    border: none;
+    background: none;
+}
+#button__exs{
+    border: none;
+    background: none;
+    width: 14px;
+    height: 14px;
+}
+#second__search{
+    width: 20px;
+    height: 20px;
+    float: left;
+    margin-top: -36px;
+    margin-left: 18px; 
+}
+#sec__search{
+    color: $second-night-font-color;
+    font-size: 20px;
+
+}
 .gifos__results{
     display: none;
 }
@@ -437,6 +482,7 @@ form{
     border: 1px solid $background-color;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
+    border-top-color: lightgray;
     padding: 10px;
 }
 
@@ -464,12 +510,13 @@ form{
     border: 1px solid #9CAFC3;
     width: 338px;
     height: 0.1px;
+    margin-top: 70px;
     
 }
 
 ///VER MAS button
 #button-more{ 
-    display: none;
+    
     background: none;
     color: $background-color;
     padding-top: 2px;
@@ -551,7 +598,7 @@ form{
 .prev2, .next2 {
     cursor: pointer;
     position: absolute;
-    top: 50%;
+    top: 400px;
     margin-top: -30px;
     padding-left: 10px;
     padding-right: 10px;
@@ -620,9 +667,8 @@ form{
     
     .container_search{
         margin-left: 5%;
-        margin-top: 5%;
         max-width:  334px;;
-        margin-left: 10%;
+        margin-left: 3%;
     }
     .container__photo {
         height: 130px;
@@ -645,6 +691,9 @@ form{
     .search{
         padding: 0; 
     }
+    .search__text{
+        width: 260px;
+    }
     .title{
         margin-left: 5%;
         margin-top: 5%;
@@ -663,6 +712,10 @@ form{
     .img-layer{
         display: none;
     }
+
+    .tryAgain{
+        margin-left: 26%;
+    }
     //MODAL
     #titleModal {
         margin-left: 8%;
@@ -677,6 +730,13 @@ form{
         font-size: 30px;
         margin-top: 100px;
     }
+    //Search
+    .autocomplete{
+        width:  314px;
+     }
+     #exs__size{
+         width: 14px;
+     }
 }
 
 ////TRENDING
@@ -884,6 +944,12 @@ form{
         width: 100%;
         height: 100%;
     }
+    #break__mobile{
+        display: block;
+    }
+    .arrowsTrend{
+        display: none;
+    }
 
 }
 
@@ -990,7 +1056,8 @@ form{
     .galeryMeasure{
         width: 156px; 
         height: 120px;
-        margin-left: 5%;
+        margin-left: 0;
+        margin-right: 2%;
         margin-bottom: 5%;
     }
     .galery{
